# lsnz

./: .flaskenv  .gitignore  README.md  config.py  lsnz.py  pyproject.toml
app/: __init__.py  models.py
app/admin/: routes.py
app/api/: __init__.py  auth.py  events.py  grades.py  players.py  registrations.py  sites.py  tokens.py
app/auth/: forms.py  identity.py  routes.py
app/cli/: __init__.py  commands.py  events.json  grades.json  players.json  sites.json
app/content/: about.html  play.html  privacy.html  terms.html  terms.md
app/errors/: handlers.py
app/events/: __init__.py  routes.py
app/main/: routes.py
app/static/: admin_grades.js  player_points.js  style.css
app/templates/: base.html  blog.html  events.html  grades.html  player.html  players.html  text_page.html
app/templates/admin/: admin.html  grades.html
app/templates/auth/: login.html  register.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/events/: event.html  events.html  register.html  site.html  sites.html
migrations/versions/: 3ec810e3d423_initial_models.py  7bc51abb6ee9_remade_db.py  84b6aa4563b8_new_model.py
tests/: conftest.py  test_apis.py  test_errors.py  test_pages.py
